@@ -1,5 +1,6 @@
 =head1 Math::GSL Changes
 
+    - Refactored Build.PL in order to use either gsl-config or PkgConfig.
     - Change Build.PL to return 0 when GSL library not found.
     - Use PkgConfig instead of ExtUtils::PkgConfig.
     - Math::GSL::Matrix constructor from a GSL matrix.
